[tool.poetry]
name = "cost-calculator"
version = "0.1.0"
description = ""
authors = ["mgd <mr.zizikk@gamil.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.100.0"
pre-commit = "^3.3.3"
asyncpg = "^0.28.0"
tortoise-orm = {extras = ["asyncpg"], version = "^0.19.3"}
python-dotenv = "^1.0.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
